[package]
name = "project"
version = "0.1.0"
authors = ["Bilyana Yordanova <sarcoholic98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdk-pixbuf="0.9"
rand = "0.8.1"
stopwatch = "0.0.7"
glib = "0.10.3"

[dependencies.gtk]
version = "0.9"
default-features = false  
features = ["v3_22"]

